# dl

./: Cargo.toml  README.md
.github/workflows/: cd.yaml  ci.yaml  github-release.yaml
Formula/: dl.rb
src/: main.old.rs  main.rs
